# bearish

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: dailypipeline.yaml  pipeline.yaml  publish.yaml  tests-runner.yaml
bearish/: __init__.py  equities.py  financials.py  main.py  types.py
bearish/analysis/: analysis.py  figures.py  view.py
bearish/database/: crud.py  schemas.py  settings.py
bearish/database/alembic/: env.py
bearish/database/scripts/: create_revision.py  upgrade.py
bearish/exchanges/: exchanges.py
bearish/interface/: interface.py
bearish/models/: base.py  financials.py
bearish/models/api_keys/: api_keys.py
bearish/scrapers/: base.py  investing.py  main.py  model.py  mongodb.py  settings.py  trading.py  type.py
bearish/sources/: alphavantage.py  base.py  financedatabase.py  financial_modelling_prep.py  investpy.py  tiingo.py  yahooquery.py  yfinance.py
bearish/tests/: test_mongodb.py
bearish/utils/: utils.py
tests/: conftest.py  test_bearish.py  test_equities.py  test_exchanges.py  test_sec_fillings.py  test_view.py
tests/data/: alphavantage.json  bear.db  etfs.csv
tests/scripts/: create_bear_db.py  create_bear_db_portfolio.py  read_prices.py
tests/sources/: balance_sheet_quarterly.pkl  cash_flow_annual.pkl  company_overview.json  dividends.pkl  earnings_quarterly.pkl  income_statement_quarterly.pkl  splits.pkl  symbol_search.pkl  test_alpha_vantage.py  test_alphavantage.py  test_finance_modelling_prep.py  test_financedatabase.py  test_investpy.py  test_tiingo.py  test_yahooquery.py  test_yfinance.py
(+72 files in other folders)
