[tool.poetry]
name = "bearish"
version = "0.1.2"
description = ""
authors = ["aan <andoludovic.andriamamonjy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
pandas = "^2.1.4"
fastparquet = "^2024.2.0"
pydantic = "^2.5.3"
unidecode = "^1.3.8"
matplotlib = "^3.8.2"
simplejson = "^3.19.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
html5lib = "^1.1"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
